@@ -787,6 +787,15 @@ path_writable_p(VALUE self)
 }
 
 /*
+ * See <tt>FileTest.world_writable?</tt>.
+ */
+static VALUE
+path_world_writable_p(VALUE self)
+{
+    return rb_funcall(rb_mFileTest, rb_intern("world_writable?"), 1, get_strpath(self));
+}
+
+/*
  * == Pathname
  *
  * Pathname represents a pathname which locates a file in a filesystem.
@@ -1036,4 +1045,5 @@ Init_pathname()
     rb_define_method(rb_cPathname, "sticky?", path_sticky_p, 0);
     rb_define_method(rb_cPathname, "symlink?", path_symlink_p, 0);
     rb_define_method(rb_cPathname, "writable?", path_writable_p, 0);
+    rb_define_method(rb_cPathname, "world_writable?", path_world_writable_p, 0);
 }
