@@ -1,3 +1,8 @@
+Sun Sep 12 19:30:27 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/pathname/pathname.c (path_world_writable_p):
+	  Pathname#world_writable? translated from pathname.rb.
+
 Sun Sep 12 09:16:06 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pathname/pathname.c (path_writable_p): Pathname#writable?
